--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>JanKen</title>
     <meta name="description" content="Simple UI for JanKen">
     <meta name="author" content="David Hsu">
-    <link type="text/css" rel="stylesheet" href="../css/janken.css">
-    <script type="text/javascript" src="../js/janken.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/janken.css">
+    <script type="text/javascript" src="js/janken.js"></script>
 </head>
 
 <body>
