--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JanKen</title>
     <meta name="description" content="Simple UI for JanKen">
     <meta name="author" content="David Hsu">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/janken.css">
     <script type="text/javascript" src="js/janken.js"></script>
 </head>
@@ -33,12 +34,12 @@
                 <input id="minutes" type="number" name="minutes" placeholder="Minutes">
                 <input id="seconds" type="number" name="seconds" placeholder="Seconds">
             </div>
-            <div class="timerDisplay">
-                <canvas id="timerDisplay"></canvas>
-            </div>
             <div class="timerSubmits">
                 <button id="start">Start</button>
                 <button id="restart">Restart</button>
+            </div>
+            <div class="timerDisplay">
+                <canvas id="timerDisplay"></canvas>
             </div>
         </div>
     </section>
