--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="timerSubmits">
                     <button id="start">Start</button>
-                    <button id="restart" disabled="disabled">Restart</button>
+                    <button id="restart" disabled>Restart</button>
                 </div>
             </form>
             <div class="timerDisplay">
@@ -48,9 +48,9 @@
     </section>
     <section class="janken">
         <div class="player">
-            <button class="rock selectionBtn" value="rock"></button>
-            <button class="paper selectionBtn" value="paper"></button>
-            <button class="scissor selectionBtn" value="scissor"></button>
+            <button class="rock selectionBtn" value="rock" disabled></button>
+            <button class="paper selectionBtn" value="paper" disabled></button>
+            <button class="scissor selectionBtn" value="scissor" disabled></button>
         </div>
         <div class="npc">
             <div><img class="rock selection"></div>
