--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <header>
+        <h1>JANKEN - Rock, Paper, Scissors</h1>
+    </header>
     <section class="scores">
         <h1>Scoreboard</h1>
         <div>
