--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
                 </div>
             </form>
             <div class="timerDisplay">
+                <h3>COUNTDOWN TIMER</h3>
                 <canvas id="timerDisplay" width="340" height="70"></canvas>
             </div>
         </div>
     </section>
     <section class="janken">
         <div class="player">
+            <h1>Player</h1>
             <button class="rock selectionBtn" value="rock" disabled></button>
             <button class="paper selectionBtn" value="paper" disabled></button>
             <button class="scissor selectionBtn" value="scissor" disabled></button>
         </div>
         <div class="npc">
+            <h1>Computer</h1>
             <div><img class="rock selection"></div>
             <div><img class="paper selection"></div>
             <div><img class="scissor selection"></div>
