--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
     </section>
     <section class="janken">
         <div class="player">
-            <h1>Player</h1>
+            <h1>Select Play</h1>
             <button class="rock selectionBtn" value="rock" disabled></button>
             <button class="paper selectionBtn" value="paper" disabled></button>
             <button class="scissor selectionBtn" value="scissor" disabled></button>
         </div>
         <div class="npc">
+            <h1>Player</h1>
+            <div id="playerSelection" class="selection"></div>
             <h1>Computer</h1>
-            <div><img class="rock selection"></div>
-            <div><img class="paper selection"></div>
-            <div><img class="scissor selection"></div>
+            <div id="cpuSelection" class="selection"></div>
         </div>
     </section>
 </body>
