UI change/enhancement

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             <button class="paper selectionBtn" value="paper" disabled></button>
             <button class="scissor selectionBtn" value="scissor" disabled></button>
         </div>
-        <div class="npc">
-            <h1>Player</h1>
+        <div class="npc" style="display:none;">
+            <h1>Player Choice</h1>
             <div id="playerSelection" class="selection"></div>
-            <h1>Computer</h1>
+            <h1>Computer Choice</h1>
             <div id="cpuSelection" class="selection"></div>
         </div>
     </section>
