--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="timerSubmits">
                     <button id="start" value="start">Start</button>
-                    <button id="restart" disabled>Restart</button>
+                    <button id="restart" style="display:none;" disabled>Restart</button>
                 </div>
             </form>
             <div class="timerDisplay" style="display:none;">
