Updated UI for alerting results

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             <div id="cpuSelection" class="selection"></div>
         </div>
     </section>
+    <section class="resultModal">
+        <div class="modalContent">
+            <div id="gameResult"></div>
+            <div id="resultScore"></div>
+        </div>
+    </section>
 </body>
 
 </html>
